--- a/backend/templates/invoice.html
+++ b/backend/templates/invoice.html
@@ -306,8 +306,9 @@
             <div class="company-name">iTech Computers</div>
             <div class="company-tagline">Professional Computer Solutions</div>
             <div class="company-contact">
-              Address: 123 Tech Street, City, State - 560001<br />
-              Email: info@itechcomputers.shop | Phone: +91 98765 43210
+              Address: RBT Mall, Meyyanur Bypass Rd, opp. to iplanet, Meyyanur,
+              Salem, Tamil Nadu<br />
+              Email: itechcomputersno7@gmail.com | Phone: +91 63829 28973
             </div>
           </div>
         </div>
